# mee4411_turtlebot3

./: README.md  remote_pc_setup_kinetic.sh  remote_pc_setup_melodic.sh  remote_pc_setup_noetic.sh
create_occ_grid/: CMakeLists.txt  package.xml
create_occ_grid/rviz/: create_occ_grid.rviz
create_occ_grid/scripts/: block_vis.py
create_occ_grid/src/create_occ_grid/: global_planning.py  lidar_localization.py  prm.py  test_map_conversions.py  test_transform2D_utils.py  transform2D_utils.py
create_occ_grid/test/: phase1.test  transform2D_utils.test
global_planning/: CMakeLists.txt  package.xml  setup.py
global_planning/nodes/: prm_planner
global_planning/src/prm/: __init__.py  prm.py  prm_node.py
kinematic_sim/: CMakeLists.txt  package.xml
kinematic_sim/include/kinematic_sim/: rosmap.hpp
kinematic_sim/src/: kinematic_sim.cc  map.c  rosmap.cpp
laser_simulator/: CMakeLists.txt  README.md  package.xml
laser_simulator/src/: LaserSimulator.cc  laser_simulator.cc
lidar_localization/: CMakeLists.txt  package.xml  setup.py
lidar_localization/nodes/: icp_localization  lidar_localization
lidar_localization/src/icp/: __init__.py  icp.py  icp_node.py
lidar_localization/src/transform2d_utils/: __init__.py
lidar_localization/tests/: test_transform2d_utils.py
local_controller/: .gitignore  CMakeLists.txt  dnn_test.sh  dnn_train.sh  package.xml  setup.py
local_controller/nodes/: dnn_controller  pure_pursuit
local_controller/params/: hyperparameters.yaml
local_controller/scripts/: dnn_test  dnn_train
local_controller/src/dnn_controller/: __init__.py  dnn_controller.py  dnn_model.py  dnn_test.py  dnn_train.py
local_controller/src/pure_pursuit/: __init__.py  pure_pursuit.py  pure_pursuit_node.py
local_controller/tests/: test_pure_pursuit.py
mee4411_core/: CMakeLists.txt  package.xml
mee4411_core/launch/: laser_sim.launch  laser_simulator.launch  mee4411_simulation.launch  occ_grid.launch  phase3.launch  pure_pursuit.launch  simulation.launch
mee4411_core/rviz/: mee4411.rviz
mee4411_core/scripts/: laser_repub.py  sim_repub.py
mee4411_core/setup/: remote_pc_setup.bash
mee4411_turtlebot3/: CMakeLists.txt  package.xml
occupancy_grid/: CMakeLists.txt  package.xml  setup.py
occupancy_grid/launch/: occ_grid.launch
occupancy_grid/maps/: map1.yaml  map2.yaml
occupancy_grid/nodes/: block_vis  create_occupancy_grid
occupancy_grid/rviz/: create_occupancy_grid.rviz
occupancy_grid/src/occupancy_grid/: __init__.py  map_conversions.py  occupancy_grid_map.py  occupancy_grid_node.py
occupancy_grid/src/occupancy_grid_map/: __init__.py
occupancy_grid/src/occupancy_grid_utils/: __init__.py  map_conversions.py
occupancy_grid/tests/: map_conversions.test  test_map_conversions.py
phase1/: CMakeLists.txt  package.xml
phase1/config/: map3.yaml
phase1/launch/: phase1.launch
phase1/src/phase1/: create_occ_grid.py  env_to_occ_grid.py  map_conversions.py  occ_grid_node.py  test_map_conversions.py
phase2/: CMakeLists.txt  package.xml
phase2/launch/: laser_sim.launch  phase2.launch
phase3/: CMakeLists.txt  package.xml
phase3/launch/: phase3.launch
phase3/src/phase3/: pure_pursuit.py  pure_pursuit_node.py
phase3/test/: phase3.test
pure_pursuit/: CMakeLists.txt  package.xml  run_test.sh  run_train.sh
pure_pursuit/params/: hyperparameters.yaml
pure_pursuit/src/phase3/: test_pure_pursuit.py
pure_pursuit/src/pure_pursuit/: dnn_model.py  dnn_navigation.py  pure_pursuit.py  pure_pursuit_node.py  test_pure_pursuit.py
pure_pursuit/test/: pure_pursuit.test
tb3_simulation/: CMakeLists.txt  package.xml  setup.py
tb3_simulation/include/: LaserSimulator.h
tb3_simulation/launch/: simulation.launch  tb3_simulation.launch  test.launch
tb3_simulation/maps/: map0.yaml
tb3_simulation/models/: LDS_01.yaml
tb3_simulation/msg/: PoseStampedNamedArray.msg
tb3_simulation/nodes/: collision_detection  repub_simulated_sensors
tb3_simulation/rviz/: laser_sim_test.rviz  mee4411.rviz
tb3_simulation/src/: LaserSimulator.cc  laser_simulator.cc  make_scan_pairs.cpp  pose_aggregator_node.cpp
tb3_simulation/src/tb3_utils/: __init__.py  tb3_params.py
tb3_simulation/src/tb3_utils/tb3_params/: __init__.py
tb3_simulation/src/transform2d_utils/: __init__.py  lookup_transform.py  transform2d_utils.py
tb3_simulation/tests/: test_transform2d_utils.py
tb3_simulation/urdf/: turtlebot3_burger.gazebo.xacro  turtlebot3_burger.urdf.xacro
turtlebot3_fake/include/turtlebot3_fake/: turtlebot3_fake.h
turtlebot3_fake/src/: turtlebot3_fake.cpp
wheel_odometry/: CMakeLists.txt  package.xml  setup.py
wheel_odometry/nodes/: wheel_odometry
wheel_odometry/src/tb3_kinematics/: __init__.py
wheel_odometry/src/wheel_odometry/: __init__.py  tb3_kinematics.py  test_kinematics.py  wheel_odometry.py  wheel_odometry_node.py
wheel_odometry/test/: kinematics.test
wheel_odometry/tests/: test_kinematics.py
