<?xml version="1.0"?>
<package format="2">
  <name>global_planning</name>
  <version>0.0.0</version>
  <description>The global_planning package</description>

  <maintainer email="pdames@temple.edu">pdames</maintainer>

  <license>LGPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>visualization_msgs</depend>

  <depend>occupancy_grid</depend>
  <depend>tb3_simulation</depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>tf2_ros</exec_depend>

  <exec_depend>python-cv2</exec_depend>
  <exec_depend>python-networkx</exec_depend>
  <exec_depend>python-numpy</exec_depend>
  <exec_depend>python-scipy</exec_depend>
  <exec_depend>python-threading</exec_depend>
  <exec_depend>python-tqdm</exec_depend>
  <exec_depend>python-typing</exec_depend>

</package>
