<?xml version="1.0"?>
<package format="2">
  <name>laser_simulator</name>
  <version>0.0.0</version>
  <description>laser_simulator</description>
  <maintainer email="bcharrow@seas.upenn.edu">bcharrow</maintainer>
  <author>Nathan Michael</author>
  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>rosbag</depend>
  <depend>tf</depend>

  <build_depend>message_generation</build_depend>

  <exec_depend>message_runtime</exec_depend>

</package>
