<?xml version="1.0"?>
<package format="2">
  <name>lidar_localization</name>
  <version>0.0.0</version>
  <description>The lidar_localization package</description>

  <maintainer email="pdames@todo.todo">pdames</maintainer>

  <license>LGPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>occupancy_grid</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>visualization_msgs</depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>python-numpy</exec_depend>
  <exec_depend>python-sklearn</exec_depend>

  <test_depend>rostest</test_depend>

</package>
