<?xml version="1.0"?>
<package format="2">
  <name>local_controller</name>
  <version>0.0.0</version>
  <description>The local_controller package</description>

  <maintainer email="pdames@temple.edu">Philip Dames</maintainer>

  <license>LGPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>visualization_msgs</depend>

  <depend>tb3_simulation</depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>tf2_ros</exec_depend>

  <exec_depend>python-numpy</exec_depend>
  <exec_depend>python-os</exec_depend>
  <exec_depend>python-random</exec_depend>
  <exec_depend>python-sklearn</exec_depend>
  <exec_depend>python-sys</exec_depend>
  <exec_depend>python-tensorboardX</exec_depend>
  <exec_depend>python-threading</exec_depend>
  <exec_depend>python-torch</exec_depend>
  <exec_depend>python-tqdm</exec_depend>
  <exec_depend>python-typing</exec_depend>
  <exec_depend>python-yaml</exec_depend>

</package>
