<?xml version="1.0"?>
<package format="2">
  <name>occupancy_grid</name>
  <version>0.0.0</version>
  <description>The occupancy_grid package</description>

  <maintainer email="pdames@temple.edu">pdames</maintainer>

  <license>LGPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>nav_msgs</depend>
  <depend>std_msgs</depend>
  <depend>visualization_msgs</depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>python-numpy</exec_depend>

</package>
