<?xml version="1.0"?>
<package format="2">
  <name>tb3_simulation</name>
  <version>0.0.0</version>
  <description>The tb3_simulation package</description>

  <maintainer email="pdames@temple.edu">Philip Dames</maintainer>

  <license>LGPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  
  <exec_depend>rospy</exec_depend>
  <exec_depend>tf2_ros</exec_depend>

  <exec_depend>python-copy</exec_depend>
  <exec_depend>python-numpy</exec_depend>
  <exec_depend>python-typing</exec_depend>

</package>
